--- a/game.css
+++ b/game.css
@@ -7,34 +7,24 @@
 
 body{
     background: rgba(250, 175, 187, 0.3);
-
+    text-align: center;
 }
 
 .header{
     font-size: 1.5rem;
-
+    font-size: 600;
 }
 
 .hide{
-    display: none;
+    /* display: none; */
 }
 
-.container{
-    /* width: 100vh; */
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 .game{
-    width: 70vh;
     height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 0.5rem;
-    border: 2px solid rgb(235, 9, 9);
 }
 
 .boxes{
@@ -44,10 +34,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    border-radius: 0.5rem;
-    border: 2px solid black; 
     gap: 0.3rem;
-    padding: 0.3rem;
 
 }
 
